cart link badge

--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -146,6 +146,12 @@ footer hr{
     font-size: 1.8rem;
 }
 
+#cart-link .badge{
+	position: absolute;
+	right: 10px;
+	top: 10px;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
